# DietPlanAgent

./: .gitignore  README.md  app.py  diet_plan.md  pyproject.toml
src/cline_automation/: crew.py  main.py
src/cline_automation/config/: agents.yaml  tasks.yaml
